[package]
name = "sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
whois-rust = "1.5.1"
indextree = "4.3.0"
prettytable-rs = "^0.10"